--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,29 @@
 ---
 layout: default
 ---
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+<div class="col-sm-12">
+    <div class="page">
+    	<div class="page-title">
+    		{{ page.title }}
+    		<div class="meta">    			
+                {% if site.owner.name %}
+                By {{site.owner.name}},
+                {% endif %}
+    			<time class="timeago" datetime="{{ page.date }}">{{ page.date |  date: "%A %-d %B %Y" }}</time>,
+    			<a href="{{ page.url | prepend: site.url }}#disqus_thread">0 <i class="fa fa-comments-o fa-lg"></i></a>
+    			comments.
+    		</div>
+    	</div>
+        <div class="page-content">
+            {{ content }}
+            <!-- Share & Comments -->
+            {% include scripts/share.html %}            
+        </div>
+    </div>
 </div>
+<script>
+    $(".page-preview-icon").hover(function(){
+        $(this).parents(".page-nav").css("z-index","5000");
+    });
+    {% include scripts/disqus.html %}
+</script>
