--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -1,14 +1,10 @@
 <ul class="sidebar" >
 <!-- sort in alphebetical order -->
     <p class="separator">Navigation</p>
-    <li><a href="{{ "/index.html" | prepend: site.url }}">Home</a></li>
-    <li><a href="{{ "/archive.html" | prepend: site.url }}">Archive</a></li>
-    <li><a href="{{ "/contact.html" | prepend: site.url }}">Contact</a></li>
-    <li><a href="{{ "/feed.xml" | prepend: site.url }}">Feed</a></li>    
-    <li><a href="{{ "/search.html" | prepend: site.url }}">Search</a></li>
-    <li><a href="{{ "/tags.html" | prepend: site.url }}">Tags</a></li>
-    <li><a href="https://github.com/nadjetey/wangana">Project home</a></li>
-    <li><a href="https://github.com/nadjetey/wangana/archive/master.zip">Download</a></li>
+    <li><a href="{{ "/index.html" }}">Home</a></li>
+    <li><a href="{{ "/projects.html" }}">Portfolio</a></li>
+    <li><a href="{{ "/contact.html" }}">Contact</a></li>
+    <li><a href="{{ "/about.html" }}">About</a></li>
     
     <a class="goto-top-link hide-on-phone" href="#top">
         <div class="goto-top text-center">
