--- a/assets/css/_sass/_site.scss
+++ b/assets/css/_sass/_site.scss
@@ -67,8 +67,8 @@ main {position: relative;}
 }
 
 .page-image {
-  width: 100%;
-  height: 230px;
+  width: 80%;
+  height: 80%;
   overflow: hidden;
   img {
     -webkit-transition: all 1s ease;
@@ -76,11 +76,16 @@ main {position: relative;}
     -o-transition: all 1s ease;
     -ms-transition: all 1s ease;
     transition: all 1s ease;
-    width: 70rem;
+    //width: 70rem;
+    width: 100%;
+    //margin-top: -13rem;
+
+    /*
     &:hover {
       width: 100%;
       margin-top: -13rem;
     }
+    */
   }
 }
 
