--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,6 @@
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
+<link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" >
+
 <!-- end custom head snippets -->
